# findONTime

./: LICENSE  README.md  config.ini  pyproject.toml  readme.com
src/findontime/: __main__.py  configs.py  connectors.py  drones.py  insaflu_uploads.py  manager.py  plot_utils.py  plotting_from_all_reports.py  records.py  tables_post.py  upload_utils.py
tests/: conftest.py  test_connectors.py
