[tool.poetry]
name = "findontime"
version = "0.2.6"
description = "A tool to upload Fastq files to the INSaFLU database and perform metagenomics pathogen detection"
authors = ["SantosJGND <dourado.jns@gmail.com>", "insapathogenomics <insapathogenomics@insa.min-saude.pt>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
xopen = "1.7.0"
dash-bootstrap-components = "1.4.1"
dataclasses = "0.6"
natsort = "8.3.1"
seaborn = "0.12.2"
Twisted = "16.7.0rc2"
sqlalchemy = "1.4.23"
fastq-handler = "^0.2.0"
paramiko = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
mock-ssh-server = "0.9.1"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
findontime = "findontime.__main__:main"

[tool.poetry.urls]
homepage = "https://github.com/INSaFLU/findONTime"
